--- a/css1.css
+++ b/css1.css
@@ -1,34 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .bg__item:first-child {
-  background-image: url(../1.jpg);
+  background-image: url(./1.jpg);
 }
 
 .bg__item:nth-child(2) {
-  background-image: url(../2.jpg);
+  background-image: url(./2.jpg);
 }
 
 .bg__item:nth-child(3) {
-  background-image: url(../3.jpg);
+  background-image: url(./3.jpg);
 }
 
 .bg__item:nth-child(4) {
-  background-image: url(../4.jpg);
+  background-image: url(./4.jpg);
 }
 
 .bg__item:nth-child(5) {
-  background-image: url(../5.jpg);
+  background-image: url(./5.jpg);
 }
 
 .bg__item:nth-child(6) {
-  background-image: url(../6.jpg);
+  background-image: url(./6.jpg);
 }
 
 .step {
   border-radius: 15px;
 }
 .step:first-child {
-  background-image: url(../1.jpg);
+  background-image: url(./1.jpg);
 }
 
 .step:nth-child(2) {
@@ -36,19 +36,19 @@
 }
 
 .step:nth-child(3) {
-  background-image: url(../3.jpg);
+  background-image: url(./3.jpg);
 }
 
 .step:nth-child(4) {
-  background-image: url(../4.jpg);
+  background-image: url(./4.jpg);
 }
 
 .step:nth-child(5) {
-  background-image: url(../5.jpg);
+  background-image: url(./5.jpg);
 }
 
 .step:nth-child(6) {
-  background-image: url(../6.jpg);
+  background-image: url(./6.jpg);
 }
 
 * {
@@ -467,3 +467,4 @@ img {
   }
 
 }
+
